# oban_web

./: .credo.exs  .formatter.exs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  dev.exs  mix.exs  package-lock.json
.github/workflows/: ci.yml  elixir.yml  standalone.yml
assets/: .swcrc  cssnano.config.js  icons.plugin.js  package-lock.json  package.json  postcss.config.js  rome.json  tailwind.config.js  webpack.config.js
assets/css/: app.css
assets/js/: app.js  phoenix.js  phoenix_live_view.js
assets/scss/: _base.scss  _blitz.scss  _borders.scss  _buttons.scss  _colors.scss  _container.scss  _flex.scss  _forms.scss  _icons.scss  _jobs.scss  _live_view.scss  _menu.scss  _mixins.scss  _modal.scss  _pill.scss  _reset.scss  _spacing.scss  _tables.scss  _type.scss  _variables.scss  app.scss
config/: config.exs
guides/advanced/: filtering.md  limiting_access.md  metrics.md  searching.md  telemetry.md
guides/configuration/: customizing.md  mounting.md
guides/introduction/: installation.md  open_source.md  overview.md  standalone.md
guides/web/: customizing.md  installation.md  overview.md  searching.md  telemetry.md  troubleshooting.md
lib/: oban_web.ex
lib/oban/: web.ex
lib/oban_web/: config.ex  helpers.ex  migrations.ex  oban_web  query.ex  router.ex  stats.ex  timing.ex  web.ex
priv/: timezones.txt
priv/static/: app.css  app.js
py/: dev.py  oban.toml  pyproject.toml
standalone/: .dockerignore  Dockerfile  mix.exs
standalone/config/: config.exs  runtime.exs
test/: oban_web_test.exs  test_helper.exs
test/support/: case.ex  (+4 more)
(+315 files in other folders)
