[project]
name = "py-dev"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "oban",
    "faker",
]

[project.scripts]
py-dev = "dev:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["dev.py"]

[tool.uv.sources]
oban = { path = "../../oban-py", editable = true }
